--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,10 +7,10 @@
       <a href="#" class="w3-btn-block w3-hover-white">TUTORIAL PYTHON</a>
     </div>
     <div class="w3-col s3">
-      <a href="#" class="w3-btn-block w3-hover-white">LABORATORIOS</a>
+      <a href="/labs/" class="w3-btn-block w3-hover-white">LABORATORIOS</a>
     </div>
     <div class="w3-col s3">
-      <a href="#" class="w3-btn-block w3-hover-white">PROYECTOS</a>
+      <a href="/proyectos" class="w3-btn-block w3-hover-white">PROYECTOS</a>
     </div>
   </div>
 </div>
