--- a/_includes/header-posts.html
+++ b/_includes/header-posts.html
@@ -3,15 +3,11 @@
          <h1 class="logo"><a href="{{ site.baseurl }}/">{{ page.title }}</a></h1>
          <nav class="nav-collapse">
              <ul class="noList">
-                 <li class="element first">
-                     <a href="{{site.url}}">{{ link.title }}</a>
+                 {% for link in site.navigation %}{% assign current = nil %}{% if page.url contains link.url %}{% assign current = 'current' %}{% endif %}
+                 <li class="element {% if forloop.first %}first{% endif %} {{ current }} {% if forloop.last %}last{% endif %}">
+                     <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
                  </li>
-                 <li class="element">
-                     <a href="{{site.url}}/labs.html">{{ link.title }}</a>
-                 </li>
-                 <li class="element last">
-                     <a href="{{site.url}}/proyectos.html">{{ link.title }}</a>
-                 </li>
+                 {% endfor %}
              </ul>
          </nav>
      </div>
