--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,7 +4,7 @@
       <a href="{{site.url}}" class="w3-btn-block w3-hover-white"><i class="fa fa-home" aria-hidden="true"></i></a>
     </div>
     <div class="w3-col s3">
-      <a href="#" class="w3-btn-block w3-hover-white">TUTORIAL PYTHON</a>
+      <a href="/tutorial/2017/01/11/tutorial-python.html" class="w3-btn-block w3-hover-white">TUTORIAL PYTHON</a>
     </div>
     <div class="w3-col s3">
       <a href="/labs.html" class="w3-btn-block w3-hover-white">LABORATORIOS</a>
