--- a/_includes/head-posts.html
+++ b/_includes/head-posts.html
@@ -18,4 +18,5 @@
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/font-awesome.min.css">
     <!-- Modernizr -->
     <script src="{{ "/assets/js/modernizr.custom.15390.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+    <script src="//twemoji.maxcdn.com/2/twemoji.min.js?2.2.3"></script>
 </head>
