--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,6 +48,7 @@
                           <li>Andrés Castellanos - <a href="#">andres.cv@galileo.edu</a></li>
                           <li>Juan Cardona - <a href="#">15000787@galileo.edu</a></li>
                           <li>Rodrigo Canek - <a href="#">rodcanek11@galileo.edu</a></li>
+                          <li>Guillermo Maldonado - <a href="#">guiller@galileo.edu</a></li>
                       </ul>
                   </p>
                 </div>
