catedratico y auxiliares actualizados en la pagina principal

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,18 +37,19 @@
                   <p>
                       <b>Catedrático:</b>
                       <ul>
+                          <li>Luis Jiménez - <a href="#">luiscu@galileo.edu</a></li>
                           <li>Ali Lemus - <a href="#">alilemus@galileo.edu</a></li>
                       </ul>
                       <b>Auxiliares:</b>
                       <ul>
-                          <li>Inés Ramirez - <a href="#">inesr.sotoj@galileo.edu</a></li>
-                          <li>Julio Fajardo - <a href="#">julioefajardo@gmail.com</a></li>
-                          <li>Diego Calderon - <a href="#">diegocdl@galileo.edu</a></li>
-                          <li>Carlos Hermosilla - <a href="#">efrainh12@galileo.edu</a></li>
                           <li>Andrés Castellanos - <a href="#">andres.cv@galileo.edu</a></li>
-                          <li>Juan Cardona - <a href="#">15000787@galileo.edu</a></li>
-                          <li>Rodrigo Canek - <a href="#">rodcanek11@galileo.edu</a></li>
-                          <li>Guillermo Maldonado - <a href="#">guiller@galileo.edu</a></li>
+                          <li>Andres Cazali Garcia - <a href="#">andres.cazali@galileo.edu</a></li>
+                          <li>Carlos Hermosilla - <a href="#">efrainh12@galileo.edu</a></li>
+                          <li>Diego Alay - <a href="#">diego.alay@galileo.edu</a></li>
+                          <li>Diego Calderon - <a href="#">diegocdl@galileo.edu</a></li>
+                          <li>Henry Campos - <a href="#">henry.campos@galileo.edu</a></li>
+                          <li>Jose Moises Lemus - <a href="#">moisesl@galileo.edu</a></li>
+                          <li>Rocio Santos - <a href="#">ilusion.santos@galileo.edu</a></li>
                       </ul>
                   </p>
                 </div>
