laboratorio 2 del año 2017 modificado, ahora es el laboratorio 1 del año 2018

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,7 +47,9 @@
                           <li>Carlos Hermosilla - <a href="#">efrainh12@galileo.edu</a></li>
                           <li>Diego Alay - <a href="#">diego.alay@galileo.edu</a></li>
                           <li>Diego Calderon - <a href="#">diegocdl@galileo.edu</a></li>
+                          <li>Guillermo Maldonado - <a href="#">guiller@galileo.edu</a></li>
                           <li>Henry Campos - <a href="#">henry.campos@galileo.edu</a></li>
+                          <li>Ivan Yosef Maldonado - <a href="#">ivanyosef@galileo.edu</a></li>
                           <li>Jose Moises Lemus - <a href="#">moisesl@galileo.edu</a></li>
                           <li>Rocio Santos - <a href="#">ilusion.santos@galileo.edu</a></li>
                       </ul>
