--- a/autograders/dashboard/src/style.css
+++ b/autograders/dashboard/src/style.css
@@ -15,6 +15,12 @@
   font-family: 'Oswald', sans-serif;
 }
 
+.title {
+  text-transform: uppercase;
+  font-weight: bold !important;
+  font-family: 'Oswald', sans-serif;
+}
+
 .card-title > small {
   font-weight: bold !important;
   color: white;
